--- a/Examples_Android/SuperpoweredPlayer/app/src/main/res/layout/activity_main.xml
+++ b/Examples_Android/SuperpoweredPlayer/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,9 @@
         android:text="Play" />
 
     <SeekBar
+        android:id="@+id/seekBar"
+        android:max="100"
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
